- Return the restored window size from GetSize() when window is minimized.
- wxCheckListBox now looks more natively, especially under XP (Marcin Malich)

wxX11:

- Added mouse wheel support (David Hart)
- Make Enter key activate the default button (David Hart)


2.8.5
-----

wxMSW:

- Added msw.font.no-proof-quality system option, see manual for description

2.8.4
-----

All:

- Fix bug in wxFileConfig when recreating a group (Steven Van Ingelgem)
- Fix wxStringOutputStream::Write() in Unicode build when the argument
  overlaps UTF-8 characters boundary
- Account for lines without newline at the end in wxExecute()

All (Unix):

- Handle socket shutdown by the peer correctly in wxSocket (Tim Kosse)

All (GUI):

- Allow status bar children in XRC (Edmunt Pienkowski)
- Fix memory leak in wxWizard when not using sizers for the page layout
- Added wxListCtrl::SetItemPtrData()
- wxHTML: Apply table background colour between the cells too (Michael Hieke)

wxMSW:

- Corrected wxStaticBox label appearance when its foreground colour was set:
  it didn't respect font size nor background colour then (Juan Antonio Ortega)
- Don't lose combobox text when it's opened and closed (Kolya Kosenko)
- Corrected GetChecked() for events from checkable menu items (smanders)
- Fixed popup menus under Windows NT 4
- Fixed bug in wxThread::Wait() in console applications introduced in 2.8.3
- Support right-aligned/centered owner drawn items in wxListCtrl (troelsk)
- Compilation fixed with WXWIN_COMPATIBILITY_2_6==0
- Fix wxComboCtrl colours under Windows Vista (Kolya Kosenko)

wxGTK:

- Fix infinite loop when adding a wxStaticText control to a toolbar
- Fix wxNO_BORDER style for wxRadioBox (David Hart)
- Fix wxTextCtrl::GetLineText() for empty lines (Marcin Wojdyr)

wxMac:

- Fix wxComboBox::SetSelection(wxNOT_FOUND) (Adrian Secord)

wxUniv:

- Fix wxTextCtrl::SetSelection(-1, -1) to behave as documented (Anders Larsen)
- Fix wxComboBox::SetSelection(wxNOT_FOUND)